--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 	<section id="cuatro">
 		<ACRONYM title="CLICK para más inforación">
 		  <article id="donde"><img class="agranda" src="img/naranja.jpg">
-		  	<img class="prueba" src="img/prueba.png">
+		  	<img class="prueba" src="img/adquirirla.jpg">
 		  </article>
 		  <article id="uso"><img class="agranda" src="img/verde.jpg">
-		  	<img class="prueba" src="img/prueba.png">
+		  	<img class="prueba" src="img/usarla.jpg">
 		  </article>
 		  <article id="como"><img class="agranda" src="img/cyan.jpg">
-		  	<img class="prueba" src="img/prueba.png">
+		  	<img class="prueba" src="img/recargarla.jpg">
 		  </article>
 		</ACRONYM>
 	</section>
