--- a/contacto.html
+++ b/contacto.html
@@ -39,15 +39,29 @@
 	<figure>
 		<img id="logo" src="img/logo.png">
 	</figure>
-	<h2>CONTACTO</h2>
-		<form action="contacto.php" method="post"><label for="nombre">Nombre:</label>
-			 <input id="nombre" type="text" name="nombre" placeholder="Nombre y Apellido" required="" />
-			 <label for="email">Email:</label>
-			 <input id="email" type="email" name="email" placeholder="ejemplo@correo.com" required="" />
-			 <label for="mensaje">Mensaje:</label>
-			 <textarea id="mensaje" name="mensaje" placeholder="Mensaje" required=""></textarea>
-			 <input id="submit" type="submit" name="submit" value="Enviar" />
-		</form>
+	
+		<form id="contac"class="contact_form" action="#" method="post">
+    <ul>
+        <li>
+             <h2>CONTACTO</h2>
+        </li>
+        <li>
+            <label for="name">Nombre:</label>
+            <input type="text"  placeholder="Ingresa tu nombre" required />
+        </li>
+        <li>
+            <label for="email">Email:</label>
+            <input type="email" name="email" placeholder="ejemplo@correo.com" required />
+        </li>
+        <li>
+            <label for="Mensaje">Mensaje:</label>
+            <textarea name="Mensaje" cols="40" rows="6" required ></textarea>
+        </li>
+        <li>
+         <button class="submit" type="submit">Enviar</button>
+        </li>
+    </ul>
+</form>
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
 	</body>
 </html>
