--- a/preguntas.html
+++ b/preguntas.html
@@ -40,6 +40,9 @@
 		<img id="logo" src="img/logo.png">
 	</figure>
 	<section>
+	<figure>
+		<img id="signo" src="img/pregunta.svg">
+	</figure>
 		<article id="preguntas">
 					<h3 class="usoletra">¿Tiene algun costo la tarjeta?</h3><p>Si la recarga es de 100 pesos la tarjeta es de regalo. Si es menor, a esta cantidad tendra un costo de $20 pesos.</p>
 					<h3 class="usoletra">¿Que pasa si por error se cobra 2 veces al pasar mi tarjeta?</h3><p>No es posible ya que la tarjeta no puede ser usada mas de una vez
