--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	</head>
 	<body>
 		<section id="buscador">
+			<div id="menu">
+		</div>
 			<a href=""><figure class="banderas">
 				<img  src="img/mexico.png">
 			</figure></a>
@@ -26,7 +28,6 @@
 			</figure></a>
 			<input id="superior"type="text" placeholder="Ingresa tu duda">
 		</section>
-		<button id="menu">Menu</button>
 		<header>
 			<nav>
 				<ul>
@@ -49,13 +50,9 @@
 			<div id="flecha1" class="prev" ></div>
 				<ul id="imagenes">
 				  		<li><img src="img/general.png" alt="">
-			<p class="rota">Tarjeta para todo tipo de usuario,la puedes adquirir en centros de emición y es la unica tarjeta con la que puedes pagar las veces que necesites dentro de la misma unidad.</p></li>
 				  		<li><img src="img/terceraedad.png" alt="">
-			<p class="rota">Esta tarjeta se emitirá en coordinación con el <strong>DIF</strong> y proporcionara sus veneficios unicamente a las personas que esten inscritas al programa <strong>INAPAM</strong>.</p></li>
 				  		<li><img src="img/estudiante.png" alt="">
-			<p class="rota">Se proporcionara en coordinacion con la <strong>CONFEQ</strong>, y tendra un costo por viaje de $3.00 Pesos M.N. exclusivamente en Zona Urbana de Lunes a Viernes en periodos escolares.</p></li>
 				  		<li><img src="img/colaborador.png" alt="">
-			<p class="rota">Uso exclusivo de los empleados de Turicun.</p></li>
 				</ul>
 		</div>
 	<section id="cuatro">
