--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,8 @@
 			</figure></a>
 			<input id="superior"type="text" placeholder="Ingresa tu duda">
 		</section>
-	<button id="menu">Menu</button>
+	<div id="menu">
+		</div>
 		<header>
 			<nav>
 				<ul>
