--- a/preguntas.html
+++ b/preguntas.html
@@ -25,7 +25,8 @@
 			</figure></a>
 			<input id="superior"type="text" placeholder="Ingresa tu duda">
 		</section>
-			<button id="menu">Menu</button>
+		<div id="menu">
+		</div>
 		<header>
 			<nav>
 				<ul>
@@ -39,15 +40,16 @@
 	<figure>
 		<img id="logo" src="img/logo.png">
 	</figure>
+
 	<section>
-	<figure>
-		<img id="signo" src="img/pregunta.svg">
-	</figure>
-		<article id="preguntas">
-					<h3 class="usoletra">¿Tiene algun costo la tarjeta?</h3><p>Si la recarga es de 100 pesos la tarjeta es de regalo. Si es menor, a esta cantidad tendra un costo de $20 pesos.</p>
-					<h3 class="usoletra">¿Que pasa si por error se cobra 2 veces al pasar mi tarjeta?</h3><p>No es posible ya que la tarjeta no puede ser usada mas de una vez
+		<article class="preguntas">
+					<h3 class="usoletra">¿Tiene algun costo la tarjeta?</h3>
+						<p>Si la recarga es de 100 pesos la tarjeta es de regalo. Si es menor, a esta cantidad tendra un costo de $20 pesos.</p>
+					<h3 class="usoletra">¿Que pasa si por error se cobra 2 veces al pasar mi tarjeta?</h3>
+					<p>No es posible ya que la tarjeta no puede ser usada mas de una vez
 					dentro de un lapso de 10 min. en la misma unidad. (excepto General).</p>
-					<h3 class="usoletra">¿Que hacer en caso de robo o extravio de la tarjeta?</h3><p>Reportarla al centro de emisión para adquirir una nueva tarjeta con el
+					<h3 class="usoletra">¿Que hacer en caso de robo o extravio de la tarjeta?</h3>
+					<p>Reportarla al centro de emisión para adquirir una nueva tarjeta con el
 					saldo acreditado.</p>
 					<h3 class="usoletra">¿Que sucede si se presenta una falla en mi tarjeta al momento de abordar el camion?</h3><p>Es raro que las tarjetas Movicun dejen de funcionar ya que su tecnología es segura y confiable, pero si eso sucede puedes pagar en efectivo y mostrando tu tarjeta se respeta la tarifa.</p>
 					<h3 class="usoletra">¿Podre pagar el pasaje de toda mi familia con mi tarjeta Movicun?</h3><p>Recuerda que solo con tu tarjeta “General” podras hacerlo ya que
