--- a/Bestbus/index.html
+++ b/Bestbus/index.html
@@ -15,7 +15,8 @@
 			<ul>
 				<li><a href="#">Inicio</a></li>
 				<li><a href="#">Bestbus</a></li>
-				<li><a href="#">clientes</a></li>
+				<li><a href="#">Galeria</a></li>
+				<li><a href="#">Clientes</a></li>
 				<li><a href="#">Contacto</a></li>	
 			</ul>	
 		</nav>
