--- a/beneficios.html
+++ b/beneficios.html
@@ -40,7 +40,25 @@
 	<figure>
 		<img id="logo" src="img/logo.png">
 	</figure>
-		
+		<section class="benefis">
+			<article>
+				<h2>Administra tus gastos</h2>
+				<h4>Disminuye el uso de efectivo</h4>
+				<p>Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizando tus gastos incluso de toda tu familia.</p>
+				<p>Sera una menra rapida de pagar tu pasaje, ya que este sistema reduce la velocidad de cobro hasta 30%.</p>
+				<nav>
+					<ul>
+						<li>Segura</li>
+						<li>Practica</li>
+						<li>Cobro exacto</li>
+						<li>Tarifas preferentes</li>
+					</ul>
+				</nav>
+			</article>
+			<figure>
+				<img src="img/benefis.png" alt=""/>
+			</figure>
+		</section>
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
 	</body>
 </html>
