--- a/beneficios.html
+++ b/beneficios.html
@@ -37,23 +37,23 @@
 				</ul>
 			</nav>
 		</header>
+
 	<figure>
 		<img id="logo" src="img/logo.png">
 	</figure>
+	<h3>Beneficios</h3>
 		<section class="benefis">
 			<article>
 				<h2>Administra tus gastos</h2>
 				<h4>Disminuye el uso de efectivo</h4>
 				<p>Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizando tus gastos incluso de toda tu familia.</p>
 				<p>Sera una menra rapida de pagar tu pasaje, ya que este sistema reduce la velocidad de cobro hasta 30%.</p>
-				<nav>
 					<ul>
 						<li>Segura</li>
 						<li>Practica</li>
 						<li>Cobro exacto</li>
 						<li>Tarifas preferentes</li>
 					</ul>
-				</nav>
 			</article>
 			<figure>
 				<img src="img/benefis.png" alt=""/>
