--- a/beneficios.html
+++ b/beneficios.html
@@ -48,7 +48,7 @@
 				<h4>Disminuye el uso de efectivo</h4>
 				<p>Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizando tus gastos incluso de toda tu familia.</p>
 				<p>Sera una menra rapida de pagar tu pasaje, ya que este sistema reduce la velocidad de cobro hasta 30%.</p>
-					<ul>
+					<ul class="beneficios">
 						<li>Segura</li>
 						<li>Practica</li>
 						<li>Cobro exacto</li>
