--- a/bestbus/index.html
+++ b/bestbus/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Bestbus</title>
+		<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/estilos.css">
 		<script scr="js/prefixfree.js"></script>
