--- a/bestbus/index.html
+++ b/bestbus/index.html
@@ -27,9 +27,6 @@
 				personal de Grupo Turicún, empresa líder en el servicio de transporte urbano de pasajeros en nuestra ciudad, con una 
 				experiencia mayor a 33 años en el 
 				mercado, nacimos con Cancún y hemos crecido a la par de su desarrollo.</p>
-			<figure>
-				<img id="autobus" src="img/autobus.png"/>
-			</figure>
 		</section>
 		<section class="contenido">
 			<h2>¿Qué hacemos?</h2>
@@ -38,6 +35,12 @@
 			<p>Contamos con conductores capacitados</p>
 			<h2>Ventajas</h2>
 			<p>Nuestra experiencia y seriedad nos respaldan, contamos con personal dedicado a la operación y al mantenimiento de las unidades las 24hrs, además de la infraestructura para garantizar la cobertura total del servicio. Aún en casos extraordinarios, el respaldo del Grupo Turicún nos permite coordinar un gran número de unidades en poco tiempo para satisfacer hasta el plan de evacuación más demandante en caso de fenómenos meteorológicos.</p>
+		</section>
+		<section class="contenido">
+			<figure>
+				<img id="autobus" src="img/autobus.jpg"/>
+				<img id="autobus" src="img/autobus2.jpg"/>
+		</figure>
 		</section>
 		<footer>
 			<h5>Cancun Quintana Roo. Bestbus</h5>
