--- a/bestbus/index.html
+++ b/bestbus/index.html
@@ -10,37 +10,31 @@
 	</head>
 	<body>
 		<header>
-			<h1>Transporte de Personal y Servicios Especiales.</h1>
+			<figure>
+				<img src="img/logo2.jpg" width="190" height="60" />
+			</figure>
 		</header>
 		<nav>
 			<ul>
-				<li><a href="#">Inicio</a></li>
+				<li><a href="index.html">Inicio</a></li>
 				<li><a href="#">Bestbus</a></li>
-				<li><a href="#">Galeria</a></li>
+				<li><a href="galeria.html">Galeria</a></li>
 				<li><a href="#">Clientes</a></li>
 				<li><a href="#">Contacto</a></li>	
 			</ul>	
 		</nav>
 		<section class="contenido">
 			<h2>BestBus</h2>
-			<p> Es la línea de transporte de 
-				personal de Grupo Turicún, empresa líder en el servicio de transporte urbano de pasajeros en nuestra ciudad, con una 
-				experiencia mayor a 33 años en el 
-				mercado, nacimos con Cancún y hemos crecido a la par de su desarrollo.</p>
+			<p> Best Bus (antes ETC), es la línea de transporte de personal de Grupo Turicún, empresa líder en el servicio de transporte urbano de pasajeros en nuestra ciudad, con una experiencia mayor a 33 años en el mercado, nacimos con Cancún y hemos crecido a la par de su desarrollo.</p>
+			
 		</section>
 		<section class="contenido">
 			<h2>¿Qué hacemos?</h2>
-			<p>Atendiendo a las necesidades específicas de nuestros clientes para el transporte de su recurso humano,Turístico, de Excursión, Escolar o de Personal. Día a día nos esmeramos en servir mejor a nuestros clientes.</p>
+			<p>Atendiendo a las necesidades específicas de nuestros clientes para el transporte de su recurso humano, la flota de autobuses de Best Bus es modelo 2006 a 2009, con aire acondicionado y asientos acojinados tapizados en tela, fijos o reclinables.</p>
+			<p>A diferencia de la mayoría de las líneas de transporte en el mercado, contamos con conductores capacitados con una antigüedad promedio de 12 años en nuestra empresa, lo cual nos permite asegurar un trato y servicio profesional a su recurso más valioso, es por esto que el transporte diario se convierte en un pretexto más para consentir a sus colaboradores.</p>
 			<h2>¿Po qué elegirnos?</h2>
-			<p>Contamos con conductores capacitados</p>
-			<h2>Ventajas</h2>
 			<p>Nuestra experiencia y seriedad nos respaldan, contamos con personal dedicado a la operación y al mantenimiento de las unidades las 24hrs, además de la infraestructura para garantizar la cobertura total del servicio. Aún en casos extraordinarios, el respaldo del Grupo Turicún nos permite coordinar un gran número de unidades en poco tiempo para satisfacer hasta el plan de evacuación más demandante en caso de fenómenos meteorológicos.</p>
-		</section>
-		<section class="contenido">
-			<figure>
-				<img id="autobus" src="img/autobus.jpg"/>
-				<img id="autobus" src="img/autobus2.jpg"/>
-		</figure>
+			<p>En Best Bus ponemos atención al crecimiento personal y profesional de nuestros conductores, ya que estamos convencidos de que esto se refleja en la calidad del servicio que reciben nuestros pasajeros.</p>
 		</section>
 		<footer>
 			<h5>Cancun Quintana Roo. Bestbus</h5>
