--- a/bestbus/galeria.html
+++ b/bestbus/galeria.html
@@ -16,7 +16,7 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="index.html">Inicio</a></li>
+				<li><a href="#">Inicio</a></li>
 				<li><a href="#">Bestbus</a></li>
 				<li><a href="galeria.html">Galeria</a></li>
 				<li><a href="#">Clientes</a></li>
