--- a/bestbus/index.html
+++ b/bestbus/index.html
@@ -23,7 +23,7 @@
 				<li><a href="#">Contacto</a></li>	
 			</ul>	
 		</nav>
-		<section class="contenido">
+		<section id="primero" class="contenido">
 			<h2>BestBus</h2>
 			<p> Best Bus (antes ETC), es la línea de transporte de personal de Grupo Turicún, empresa líder en el servicio de transporte urbano de pasajeros en nuestra ciudad, con una experiencia mayor a 33 años en el mercado, nacimos con Cancún y hemos crecido a la par de su desarrollo.</p>
 
