--- a/beneficios.html
+++ b/beneficios.html
@@ -39,7 +39,7 @@
 		</header>
 
 	<figure>
-		<img id="logo" src="img/logo.png">
+		<a href="index.html"><img id="logo" src="img/logo.png"></a>
 	</figure>
 	<h3>Beneficios</h3>
 		<section class="benefis">
