--- a/contacto.html
+++ b/contacto.html
@@ -38,7 +38,7 @@
 			</nav>
 		</header>
 	<figure>
-		<img id="logo" src="img/logo.png">
+		<a href="index.html"><img id="logo" src="img/logo.png"></a>
 	</figure>
 	
 		<form id="contac"class="contact_form" action="#" method="post">
