--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</nav>
 		</header>
 	<figure>
-		<img id="logom" src="img/logo.png">
+		<a href="index.html"><img id="logom" src="img/logo.png"></a>
 		<figcaption>
 			<h2 id="loguito">La nueva tarjeta prepago de transporte urbano.</h2>
 		</figcaption>
