--- a/preguntas.html
+++ b/preguntas.html
@@ -38,9 +38,9 @@
 			</nav>
 		</header>
 	<figure>
-		<img id="logo" src="img/logo.png">
+		<a href="index.html"><img id="logo" src="img/logo.png"></a>
 	</figure>
-
+	
 	<section>
 		<article class="preguntas">
 					<h3 class="usoletra">¿Tiene algun costo la tarjeta?</h3>
