--- a/beneficios.html
+++ b/beneficios.html
@@ -41,7 +41,6 @@
 	<figure>
 		<a href="index.html"><img id="logo" src="img/logo.png"></a>
 	</figure>
-	<h3>Beneficios</h3>
 		<section class="benefis">
 			<article>
 				<h2>Administra tus gastos</h2>
@@ -56,7 +55,7 @@
 					</ul>
 			</article>
 			<figure>
-				<img src="img/benefis.png" alt=""/>
+				<img src="img/coins.png" alt=""/>
 			</figure>
 		</section>
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
