--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 		</div>
 	<section id="cuatro">
 		<ACRONYM title="CLICK para más inforación">
-		  <article id="donde"><img class="agranda" src="img/naranja.jpg">
+		  <a href="donde.html"><article id="donde"><img class="agranda" src="img/naranja.jpg">
 		  	<img class="prueba" src="img/adquirirla.jpg">
-		  </article>
-		  <article id="uso"><img class="agranda" src="img/verde.jpg">
+		  </article></a>
+		  <a href="como.html"><article id="uso"><img class="agranda" src="img/verde.jpg">
 		  	<img class="prueba" src="img/usarla.jpg">
-		  </article>
-		  <article id="como"><img class="agranda" src="img/cyan.jpg">
+		  </article></a>
+		  <a href="recargar.html"><article id="como"><img class="agranda" src="img/cyan.jpg">
 		  	<img class="prueba" src="img/recargarla.jpg">
-		  </article>
+		  </article></a>
 		</ACRONYM>
 	</section>
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
