--- a/beneficios.html
+++ b/beneficios.html
@@ -37,16 +37,16 @@
 				</ul>
 			</nav>
 		</header>
-
 	<figure>
 		<a href="index.html"><img id="logo" src="img/logo.png"></a>
+		<h2 class="bene">Beneficios</h2>
 	</figure>
 		<section class="benefis">
 			<article>
 				<h2>Administra tus gastos</h2>
 				<h4>Disminuye el uso de efectivo</h4>
 				<p>Con este sistema de pago puedes prevenir tu presupuesto de la semana o del mes, organizando tus gastos incluso de toda tu familia.</p>
-				<p>Sera una menra rapida de pagar tu pasaje, ya que este sistema reduce la velocidad de cobro hasta 30%.</p>
+				<p>Sera una manera rapida de pagar tu pasaje, ya que este sistema reduce la velocidad de cobro hasta 30%.</p>
 					<ul class="beneficios">
 						<li>Segura</li>
 						<li>Practica</li>
@@ -55,7 +55,7 @@
 					</ul>
 			</article>
 			<figure>
-				<img src="img/coins.png" alt=""/>
+				<img id="monedas" src="img/coins.png" alt=""/>
 			</figure>
 		</section>
 	<footer><h5>Movicun 2013, Cancún Quintana Roo, México.</h5></footer>
