arreglo de forma de uso

--- a/como.html
+++ b/como.html
@@ -44,10 +44,10 @@
 		<section class="benefis">
 			<article>
 				<figure>
-					<img src="img/paso1.png">
-					<img src="img/paso2.png">
-					<img src="img/paso3.png">
-					<img src="img/paso4.png">
+					<img class="formadeuso" src="img/paso1.png">
+					<img class="formadeuso" src="img/paso2.png">
+					<img class="formadeuso" src="img/paso3.png">
+					<img class="formadeuso" src="img/paso4.png">
 				</figure>
 			</article>
 		</section>
