--- a/preguntas.html
+++ b/preguntas.html
@@ -39,7 +39,7 @@
 		</header>
 	<figure>
 		<a href="index.html"><img id="logo" src="img/logo.png"></a>
-		<h2 class="bene">Dudas</h2>
+		<h2 class="bene">Preguntas</h2>
 	</figure>
 	
 	<section>
