--- a/contacto.html
+++ b/contacto.html
@@ -37,14 +37,14 @@
 		<a href="index.html"><img id="logo" src="img/logo.png"></a>
 	</figure>
 	
-		<form id="contac"class="contact_form" action="#" method="post">
+	<form id="contac"class="contact_form" action="contacto.php" method="post">
     <ul>
         <li>
              <h2>CONTACTO</h2>
         </li>
         <li>
             <label for="name">Nombre:</label>
-            <input type="text"  placeholder="Ingresa tu nombre" required />
+            <input name="nombre" type="text"  placeholder="Ingresa tu nombre" required />
         </li>
         <li>
             <label for="email">Email:</label>
@@ -52,7 +52,7 @@
         </li>
         <li>
             <label for="Mensaje">Mensaje:</label>
-            <textarea name="Mensaje" cols="40" rows="6" required ></textarea>
+            <textarea name="mensaje" cols="40" rows="6" required ></textarea>
         </li>
         <li>
          <button class="submit" type="submit">Enviar</button>
