--- a/contacto.html
+++ b/contacto.html
@@ -37,25 +37,25 @@
 		<a href="index.html"><img id="logo" src="img/logo.png"></a>
 	</figure>
 	
-	<form id="contac"class="contact_form" action="contacto.php" method="post">
+	<form class="contact_form" action="contacto.php" method="post">
     <ul>
         <li>
-             <h2>CONTACTO</h2>
+             <h2>Contáctanos</h2>
         </li>
         <li>
             <label for="name">Nombre:</label>
-            <input name="nombre" type="text"  placeholder="Ingresa tu nombre" required />
+            <input name="nombre" type="text" required id="nombre"  placeholder="Johan Ricardo" />
         </li>
         <li>
             <label for="email">Email:</label>
-            <input type="email" name="email" placeholder="ejemplo@correo.com" required />
+            <input type="email" name="email" placeholder="tucorreo@ejemplo.com" required />
         </li>
         <li>
-            <label for="Mensaje">Mensaje:</label>
-            <textarea name="mensaje" cols="40" rows="6" required ></textarea>
+            <label for="mensaje">Mensaje:</label>
+            <textarea name="mensaje" cols="40" rows="6" required id="mensaje" ></textarea>
         </li>
         <li>
-         <button class="submit" type="submit">Enviar</button>
+        	<button class="submit" type="submit">Enviar</button>
         </li>
     </ul>
 </form>
