--- a/contacto.html
+++ b/contacto.html
@@ -44,7 +44,7 @@
         </li>
         <li>
             <label for="name">Nombre:</label>
-            <input name="nombre" type="text" required id="nombre"  placeholder="Johan Ricardo" />
+            <input name="nombre" type="text" required id="nombre"  placeholder="Ingresa tu nombre" />
         </li>
         <li>
             <label for="email">Email:</label>
