--- a/00/index.html
+++ b/00/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Bestbus</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/estilos.css">
@@ -14,16 +15,18 @@
 		<p>Menu</p>
 	</header>
 		<h2 class="uno">BestBus</h2>
-			<p class="cuadrotexto"> 
+		<section class="cuadro">
+			<p class="parrafo"> 
 				Best Bus (antes ETC), es la línea de transporte de personal de Grupo Turicún, empresa líder en el servicio de transporte urbano de pasajeros en nuestra ciudad, con una experiencia mayor a 33 años en el mercado, nacimos con Cancún y hemos crecido a la par de su desarrollo.</p>
-			<div id="autobus">
+				<div id="autobus">
 				<figure>
 					<figcaption>Empresa lider en el Transporte Urbano.</figcaption>
 					<img src="img/autobus.png">
 				</figure>
 			</div>
-			<p class="cuadrotexto"> 
+			<p class="parrafo"> 
 				Nos enfocamos al Transporte de Personal, la relacion de mas de 10 años con algunos de nuestros clientes avalan nuestra calidad y buen servicio, ademas de esto, contamos con unidades adptadas para servicio turístico, por lo que será fácil satisfacer sus necesidades.</p>
+		</section>
 			<h2>Galeria</h2>
 			<div id="autobus">
 				<figure>
