--- a/00/index.html
+++ b/00/index.html
@@ -14,26 +14,43 @@
 		</figure>
 		<p>Menu</p>
 	</header>
-		<h2 class="uno">BestBus</h2>
-		<section class="cuadro">
+		<section id="uno" class="cuadro">
 			<p class="parrafo"> 
-				Best Bus (antes ETC), es la línea de transporte de personal de Grupo Turicún, empresa líder en el servicio de transporte urbano de pasajeros en nuestra ciudad, con una experiencia mayor a 33 años en el mercado, nacimos con Cancún y hemos crecido a la par de su desarrollo.</p>
-				<div id="autobus">
+				Best Bus (antes ETC), es la línea de transporte de personal de Grupo Turicún, empresa líder en el servicio de transporte urbano de pasajeros en nuestra ciudad, con una experiencia mayor a 33 años en el mercado, nacimos con Cancún y hemos crecido a la par de su desarrollo.
+				<img class="carrito"src="img/carrito.png"/>
+			</p>
+				<p class="parrafo"> 
+				Nos enfocamos al Transporte de Personal, la relacion de mas de 10 años con algunos de nuestros clientes avalan nuestra calidad y buen servicio, ademas de esto, contamos con unidades adptadas para servicio turístico, por lo que será fácil satisfacer sus necesidades.
+				<img class="carrito" src="img/carrito.png"/>
+			</p>
+			<div id="autobus">
 				<figure>
 					<figcaption>Empresa lider en el Transporte Urbano.</figcaption>
 					<img src="img/autobus.png">
 				</figure>
 			</div>
-			<p class="parrafo"> 
-				Nos enfocamos al Transporte de Personal, la relacion de mas de 10 años con algunos de nuestros clientes avalan nuestra calidad y buen servicio, ademas de esto, contamos con unidades adptadas para servicio turístico, por lo que será fácil satisfacer sus necesidades.</p>
+			
 		</section>
-			<h2>Galeria</h2>
-			<div id="autobus">
-				<figure>
-					<img src="img/autobus.png">
-				</figure>
-			</div>
-			<h2>Clientes</h2>
+	<h2>Galeria</h2>
+		<section class="cuadro">
+				<div id="galeria">
+					<figure>
+						<img src="img/autobus.jpg">
+					</figure>
+				</div>
+		</section>
+	<h2>Clientes</h2>
+	<section class="cuadro">
+		<div class="cliente"></div>
+		<div class="cliente"></div>
+		<div class="cliente"></div>
+		<div class="cliente"></div>
+		<div class="cliente"></div>
+		<div class="cliente"></div>
+		<div class="cliente"></div>
+		<div class="cliente"></div>
+	</section>
+	<h2>Contacto</h2>
 	<footer>
 		<h5>Cancun Quintana Roo. Bestbus</h5>
 	</footer>
