--- a/00/index.html
+++ b/00/index.html
@@ -19,15 +19,19 @@
 		  <ul class="rslides">
 		    <li>
 		      <img src="img/slide1.jpg" />
+		      <figcaption>Transporte de personal.</figcaption>
 		    </li>
 		    <li>
 		      <img src="img/slide2.jpg" />
+		      <figcaption>Autobus 1.</figcaption>
 		    </li>
 		    <li>
 		      <img src="img/slide3.jpg" />
+		      <figcaption>Autobus 3.</figcaption>
 		    </li>
 		    <li>
 		      <img src="img/slide4.jpg" />
+		      <figcaption>Autobus 4</figcaption>
 		    </li>
 		  </ul>
 	</div>
