--- a/00/index.html
+++ b/00/index.html
@@ -33,6 +33,10 @@
 		      <img src="img/slide4.jpg" />
 		      <figcaption>Autobus 4</figcaption>
 		    </li>
+		     <li>
+		      <img src="img/slide5.jpg" />
+		      <figcaption>Autobus 5</figcaption>
+		    </li>
 		  </ul>
 	</div>
 		<h2>Bestbus</h2>
