--- a/ajax/basico/index.html
+++ b/ajax/basico/index.html
@@ -1,7 +1,14 @@
 <html>
 	<head>
-		<script type="text/javascript">
-		function ejecutarajax(){
+		<meta charset="utf-8"/>
+		<link rel="stylesheet" href="estilos.css">
+		<title>AJAX</title>
+	</head>
+	<body>
+		<div id="midiv"></div>
+		<button id="boton" type="button" onclick="ejecutarajax()">Ejecutar</button>
+		<script>
+			function ejecutarajax(){
 			var conexion;
 			if (window.XMLHttpRequest)			  {
 			  conexion=new XMLHttpRequest();
@@ -18,10 +25,6 @@
 			conexion.send();
 		}
 		</script>
-	</head>
-	<body>
-		<div id="midiv"></div>
-		<button type="button" onclick="ejecutarajax()">Ejecutar</button>
 	</body>
 </html>
 
