--- a/00/index.html
+++ b/00/index.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<title>Bestbus</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/estilos.css">
+	<script type="text/javascript" src="js/modernizr.js"></script>
 </head>
 <body>
 	<header>
@@ -26,7 +28,7 @@
 		      <figcaption>Autobus 1.</figcaption>
 		    </li>
 		    <li>
-		      <img src="img/slide3.jpg" />
+		      <img src="img/slide31.jpg" />
 		      <figcaption>Autobus 3.</figcaption>
 		    </li>
 		    <li>
@@ -58,13 +60,30 @@
 			
 		</section>
 	<h2>Galeria</h2>
-		<section class="cuadro">
-				<div id="galeria">
-					<figure>
-						<img src="img/galeria.png">
-					</figure>
-				</div>
+	<section class="cuadro">
+					<div class="galeria">
+						<img src="img/1.jpg" alt="image1"/>
+					</div>
+					<div class="galeria">
+						<img src="img/2.jpg" alt="image2"/>
+					</div>
+					<div class="galeria">
+						<img src="img/3.jpg" alt="image1"/>
+					</div>
+					<div class="galeria">
+						<img src="img/4.jpg" alt="image1"/>
+					</div>
+					<div class="galeria">
+						<img src="img/5.jpg" alt="image1"/>
+					</div>
+					<div class="galeria">
+						<img src="img/6.jpg" alt="image1"/>
+					</div>
+					<div class="galeria">
+						<img src="img/7.jpg" alt="image1"/>
+					</div>
 		</section>
+		
 	<h2>Clientes</h2>
 	<section class="cuadro">
 		<div class="cliente"></div>
@@ -103,9 +122,12 @@
 	<script src="js/responsiveslides.js"></script>
 	<script >
 		 $(function() {
-   	 		$(".rslides").responsiveSlides();
+   	 		$(".rslides").responsiveSlides({
+   	 			auto:true,
+   	 			speed:400,
+   	 		});
   			});
 	</script>
-
+	
 </body>
 </html>
