--- a/00/index.html
+++ b/00/index.html
@@ -11,11 +11,20 @@
 </head>
 <body>
 	<header>
+		<nav id="menu">
+			<ul>
+				<li><a href="#uno">Inicio</a></li>
+				<li><a href="#home">Bestbus</a></li>
+				<li><a href="#galeria">Galeria</a></li>
+				<li><a href="#clientes">Clientes</a></li>
+				<li><a href="#carta">Contacto</a></li>
+			</ul>
+			</nav>
 		<figure>
 			<img src="img/bestbus.jpg">
-
 		</figure>
-		<p>Menu</p>
+		
+		
 	</header>
 	<div id="uno">
 		  <ul class="rslides">
@@ -28,7 +37,7 @@
 		      <figcaption>Autobus 1.</figcaption>
 		    </li>
 		    <li>
-		      <img src="img/slide31.jpg" />
+		      <img src="img/slide3.jpg" />
 		      <figcaption>Autobus 3.</figcaption>
 		    </li>
 		    <li>
@@ -42,7 +51,7 @@
 		  </ul>
 	</div>
 		<h2>Bestbus</h2>
-		<section class="cuadro">
+		<section id="home" class="cuadro">
 			<p class="parrafo"> 
 				Best Bus (antes ETC), es la línea de transporte de personal de Grupo Turicún, empresa líder en el servicio de transporte urbano de pasajeros en nuestra ciudad, con una experiencia mayor a 33 años en el mercado, nacimos con Cancún y hemos crecido a la par de su desarrollo.
 				<img class="carrito"src="img/carrito.png"/>
@@ -60,7 +69,7 @@
 			
 		</section>
 	<h2>Galeria</h2>
-	<section class="cuadro">
+	<section id="galeria" class="cuadro">
 					<div class="galeria">
 						<img src="img/1.jpg" alt="image1"/>
 					</div>
@@ -85,7 +94,7 @@
 		</section>
 		
 	<h2>Clientes</h2>
-	<section class="cuadro">
+	<section id="clientes" class="cuadro">
 		<div class="cliente"></div>
 		<div class="cliente"></div>
 		<div class="cliente"></div>
@@ -96,8 +105,9 @@
 		<div class="cliente"></div>
 	</section>
 	<h2>Contacto</h2>
-	<form class="contact_form" action="#" method="post">
-    <ul class="contacto">
+	<section id="carta" class="clientes">
+	<form  class="contact_form" action="#" method="post">
+    <ul  class="contacto">
         <li>
             <label for="name"></label>
             <input type="text"  placeholder="Ingres tu Nombre" required />
@@ -115,6 +125,7 @@
         </li>
     </ul>
 </form>
+</section>
 	<footer>
 		<h5>Cancun Quintana Roo. Bestbus</h5>
 	</footer>
@@ -128,6 +139,33 @@
    	 		});
   			});
 	</script>
-	
+	<script>
+	$("a").on("click",function(){
+   if(this.hash){
+      //console.log($(this).attr('href'));
+      $("html body").animate({"scrollTop":$($(this).attr('href')).offset().top-82},1400);
+      return false;
+         }
+});
+
+	$(document).ready(function(){
+	   var $win = window;
+	   var $pos = 40;
+
+	   $(window).scroll(function(){
+	      if($(this).scrollTop() > $pos){
+	         $("a.to-top").css("opacity","1");
+	         $("header").css("box-shadow","2px 5px 20px rgb(14,62,146,0.5)");
+	      }else{
+	         $("a.to-top").css("opacity","0");
+	         $("header").css("box-shadow","1px 2px 1px transparent");
+	      }
+	   })
+	});
+
+	$(".to-top").on("click",function(){
+	   $("html, body").animate({scrollTop:0},"fast");
+	});
+	</script>
 </body>
 </html>
