--- a/00/index.html
+++ b/00/index.html
@@ -51,7 +51,7 @@
 		<h2>Bestbus</h2>
 		<section id="home" class="cuadro">
 			<p class="parrafo"> 
-				Best Bus (antes ETC), es la línea de transporte de personal de Grupo Turicún, empresa líder en el servicio de transporte urbano de pasajeros en nuestra ciudad, con una experiencia mayor a 33 años en el mercado, nacimos con Cancún y hemos crecido a la par de su desarrollo.
+				Best Bus es la línea de transporte de personal de Grupo Turicún,nacimos con Cancún y hemos crecido a la par de su desarrollo.
 				<img class="carrito"src="img/carrito.png"/>
 			</p>
 				<p class="parrafo"> 
