--- a/00/index.html
+++ b/00/index.html
@@ -52,19 +52,22 @@
 		<section id="home" class="cuadro">
 			<p class="parrafo"> 
 				Best Bus es la línea de transporte de personal de Grupo Turicún,nacimos con Cancún y hemos crecido a la par de su desarrollo.
-				<img class="carrito"src="img/carrito.png"/>
 			</p>
 				<p class="parrafo"> 
 				Nos enfocamos al Transporte de Personal, la relacion de mas de 10 años con algunos de nuestros clientes avalan nuestra calidad y buen servicio, ademas de esto, contamos con unidades adptadas para servicio turístico, por lo que será fácil satisfacer sus necesidades.
-				<img class="carrito" src="img/carrito.png"/>
 			</p>
 			<div id="autobus">
 				<figure>
-					<figcaption>Empresa lider en el Transporte Urbano.</figcaption>
+					<figcaption>Transporte de Personal.</figcaption>
 					<img id="mueve"src="img/autobus.png">
 				</figure>
 			</div>
-			
+				<p class="parrafo">
+				Nuestra misión es brindar un servicio de trasporte seguro, cómodo, eficiente y cordial que satisfaga cada vez mejor las expectativas de nuestros clientes y que, con ello todo nuestro personal tenga acceso a una mejor calidad de vida, repercutiendo que los accionistas tengan una mayor rentabilidad de su inversión, a la comunidad y el turismo que nos visita, un medio que ayude hacer más agradable su  estadía y  vida cotidiana.
+			</p>
+				<p class="parrafo">
+				La visión  que tenemos es ser una empresa líder en el transporte de servicios turísticos y transporte de personal, y en servicios especiales en el mercado  interno, teniendo los autobuses de vanguardia y así, cumplir con los  requerimientos y necesidades de nuestros clientes.
+			</p>
 		</section>
 	<h2>Galeria</h2>
 	<section id="galeria" class="cuadro">
