--- a/00/index.html
+++ b/00/index.html
@@ -32,19 +32,19 @@
 		    </li>
 		    <li>
 		      <img src="img/slide2.jpg" />
-		      <figcaption>Autobus 1.</figcaption>
+		      <figcaption>Tours y Servicios Especiales.</figcaption>
 		    </li>
 		    <li>
 		      <img src="img/slide3.jpg" />
-		      <figcaption>Autobus 3.</figcaption>
-		    </li>
-		    <li>
-		      <img src="img/slide4.jpg" />
-		      <figcaption>Autobus 4</figcaption>
+		      <figcaption> Servicios a Escuelas.</figcaption>
 		    </li>
 		     <li>
 		      <img src="img/slide5.jpg" />
-		      <figcaption>Autobus 5</figcaption>
+		      <figcaption>Servicios a Iglesias, Eventos Sociales, Etc.</figcaption>
+		    </li>
+		    <li>
+		      <img src="img/slide4.jpg" />
+		      <figcaption>Autobuses de 43, 45 y 47 asientos.</figcaption>
 		    </li>
 		  </ul>
 	</div>
