--- a/00/index.html
+++ b/00/index.html
@@ -126,6 +126,8 @@
         </li>
     </ul>
 </form>
+	<img class="mapa" src="img/mapa.jpg">
+	<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com.mx/maps/myplaces?hl=es-419&amp;ctz=360&amp;ie=UTF8&amp;ll=26.92207,-84.331055&amp;spn=12.850318,24.98291&amp;t=m&amp;z=6"></iframe><br /><small><a href="https://www.google.com.mx/maps/myplaces?hl=es-419&amp;ctz=360&amp;ie=UTF8&amp;ll=26.92207,-84.331055&amp;spn=12.850318,24.98291&amp;t=m&amp;z=6&amp;source=embed" style="color:#0000FF;text-align:left">Ver mapa más grande</a></small>
 </section>
 	<footer>
 		<h5>Cancun Quintana Roo. Bestbus</h5>
