--- a/00/index.html
+++ b/00/index.html
@@ -126,8 +126,8 @@
         </li>
     </ul>
 </form>
-	<img class="mapa" src="img/mapa.jpg"/>
-	<iframe width="425" height="0" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com.mx/maps/myplaces?hl=es-419&amp;ctz=360&amp;ie=UTF8&amp;ll=26.92207,-84.331055&amp;spn=12.850318,24.98291&amp;t=m&amp;z=6"></iframe><br /><small><a href="https://www.google.com.mx/maps/myplaces?hl=es-419&amp;ctz=360&amp;ie=UTF8&amp;ll=26.92207,-84.331055&amp;spn=12.850318,24.98291&amp;t=m&amp;z=6&amp;source=embed" style="color:#0000FF;text-align:left">Ver mapa más grande</a></small>
+
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com.mx/maps?f=d&amp;source=s_d&amp;saddr=21.165103,-86.8381&amp;daddr=&amp;hl=es-419&amp;geocode=&amp;sll=21.164838,-86.837745&amp;sspn=0.002926,0.005284&amp;mra=mift&amp;mrsp=0&amp;sz=18&amp;ie=UTF8&amp;t=m&amp;ll=21.164838,-86.837745&amp;spn=0.002926,0.005284&amp;output=embed"></iframe><br /><small><a href="https://www.google.com.mx/maps?f=d&amp;source=embed&amp;saddr=21.165103,-86.8381&amp;daddr=&amp;hl=es-419&amp;geocode=&amp;sll=21.164838,-86.837745&amp;sspn=0.002926,0.005284&amp;mra=mift&amp;mrsp=0&amp;sz=18&amp;ie=UTF8&amp;t=m&amp;ll=21.164838,-86.837745&amp;spn=0.002926,0.005284" style="color:#0000FF;text-align:left">Ver mapa más grande</a></small>
 </section>
 	<footer>
 		<h5>Cancun Quintana Roo. Bestbus</h5>
