mapa listoy social

--- a/00/index.html
+++ b/00/index.html
@@ -115,7 +115,7 @@
         </li>
         <li>
             <label for="email"></label>
-            <input type="email" name="email" placeholder="ejemplo@correo.com" required />
+            <input type="email" name="email" placeholder="tucorreo@dominio.com" required />
         </li>
         <li>
             <label for="Mensaje"></label>
@@ -126,11 +126,15 @@
         </li>
     </ul>
 </form>
-
-<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com.mx/maps?f=d&amp;source=s_d&amp;saddr=21.165103,-86.8381&amp;daddr=&amp;hl=es-419&amp;geocode=&amp;sll=21.164838,-86.837745&amp;sspn=0.002926,0.005284&amp;mra=mift&amp;mrsp=0&amp;sz=18&amp;ie=UTF8&amp;t=m&amp;ll=21.164838,-86.837745&amp;spn=0.002926,0.005284&amp;output=embed"></iframe><br /><small><a href="https://www.google.com.mx/maps?f=d&amp;source=embed&amp;saddr=21.165103,-86.8381&amp;daddr=&amp;hl=es-419&amp;geocode=&amp;sll=21.164838,-86.837745&amp;sspn=0.002926,0.005284&amp;mra=mift&amp;mrsp=0&amp;sz=18&amp;ie=UTF8&amp;t=m&amp;ll=21.164838,-86.837745&amp;spn=0.002926,0.005284" style="color:#0000FF;text-align:left">Ver mapa más grande</a></small>
+		<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com.mx/maps?f=d&amp;source=s_d&amp;saddr=21.165103,-86.8381&amp;daddr=&amp;hl=es-419&amp;geocode=&amp;sll=21.164838,-86.837745&amp;sspn=0.002926,0.005284&amp;mra=mift&amp;mrsp=0&amp;sz=18&amp;ie=UTF8&amp;t=m&amp;ll=21.164838,-86.837745&amp;spn=0.002926,0.005284&amp;output=embed"></iframe><br /><small><a href="https://www.google.com.mx/maps?f=d&amp;source=embed&amp;saddr=21.165103,-86.8381&amp;daddr=&amp;hl=es-419&amp;geocode=&amp;sll=21.164838,-86.837745&amp;sspn=0.002926,0.005284&amp;mra=mift&amp;mrsp=0&amp;sz=18&amp;ie=UTF8&amp;t=m&amp;ll=21.164838,-86.837745&amp;spn=0.002926,0.005284" style="color:#0000FF;text-align:left" target="_blank">Ver mapa más grande </a></small>
 </section>
 	<footer>
 		<h5>Cancun Quintana Roo. Bestbus</h5>
+		<div class="social">
+			<a href="https://www.youtube.com/" target="_blank"><img src="img/youtube.png" alt=""></a>
+			<a href="https://twitter.com/bestbuscancun" target="_blank"><img src="img/tui.png" alt=""></a>
+			<a href="https://www.facebook.com/CancunBestBus" target="_blank"><img src="img/face.png" alt=""></a>
+		</div>
 	</footer>
 	<script src="js/jquery.js"></script>
 	<script src="js/responsiveslides.js"></script>
