--- a/00/index.html
+++ b/00/index.html
@@ -83,15 +83,7 @@
 					<div class="galeria">
 						<img src="img/4.jpg" alt="image1"/>
 					</div>
-					<div class="galeria">
-						<img src="img/5.jpg" alt="image1"/>
-					</div>
-					<div class="galeria">
-						<img src="img/6.jpg" alt="image1"/>
-					</div>
-					<div class="galeria">
-						<img src="img/7.jpg" alt="image1"/>
-					</div>
+				
 		</section>
 		
 	<h2>Clientes</h2>
@@ -125,7 +117,10 @@
          <button class="submit" type="submit">Enviar</button>
         </li>
     </ul>
+    <p>Telefono: 888 888</p>
+	<p>Correo: soporte@bestbus.com.mx</p>
 </form>
+
 		<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com.mx/maps?f=d&amp;source=s_d&amp;saddr=21.165103,-86.8381&amp;daddr=&amp;hl=es-419&amp;geocode=&amp;sll=21.164838,-86.837745&amp;sspn=0.002926,0.005284&amp;mra=mift&amp;mrsp=0&amp;sz=18&amp;ie=UTF8&amp;t=m&amp;ll=21.164838,-86.837745&amp;spn=0.002926,0.005284&amp;output=embed"></iframe><br /><small><a href="https://www.google.com.mx/maps?f=d&amp;source=embed&amp;saddr=21.165103,-86.8381&amp;daddr=&amp;hl=es-419&amp;geocode=&amp;sll=21.164838,-86.837745&amp;sspn=0.002926,0.005284&amp;mra=mift&amp;mrsp=0&amp;sz=18&amp;ie=UTF8&amp;t=m&amp;ll=21.164838,-86.837745&amp;spn=0.002926,0.005284" style="color:#0000FF;text-align:left" target="_blank">Ver mapa más grande </a></small>
 </section>
 	<footer>
