--- a/00/index.html
+++ b/00/index.html
@@ -100,7 +100,7 @@
 		<div class="cliente"><img src="img/c10.jpg"></div>
 		<div class="cliente"><img src="img/c11.jpg"></div>
 		<div class="cliente"><img src="img/c12.png"></div>
-		
+
 	</section>
 	<h2>Contacto</h2>
 	<section id="carta" class="clientes">
@@ -122,7 +122,8 @@
          <button class="submit" type="submit">Enviar</button>
         </li>
     </ul>
-    <p>Telefono: 888 888</p>
+    <h3>Si te interesan nuestros servicios para tu negocio, escríbenos, llámanos o visítanos. Nos pondremos en contacto lo más pronto posible.</h3>
+    <p>Telefono:(998) 884.4235</p>
 	<p>Correo: soporte@bestbus.com.mx</p>
 </form>
 
